--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "node-sass": "^5.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -28,9 +29,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^4.12.0",
+    "fibers": "^5.0.0",
     "prettier": "^2.2.1",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10.0.5 ",
+    "style-resources-loader": "^1.4.1",
     "typescript": "~4.1.5"
   }
 }
